Refactor and enhance code consistency across modules
Removed unnecessary comments and suppressions, streamlined method arguments, and improved code readability through consistent use of helper methods. Added test coverage for wholesale customer detail handling and fixed minor issues such as redundant null checks and formatting.